fixed a href for logo link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="/">Taylor Doan</a>
+      <a href="https://tridoan1998.github.io/Portfolio/">Taylor Doan</a>
     </div>
 
     <div class="right">
