update text on the page to move to the middle

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <div class="text">
         <h2>Hi, I'm Taylor 👋</h2>
             <p>Angular Front End Developer with experience in building responsive, resuable web application.</p>
+            <br>
+            <p>"There are only two hard things in Computer Science: cache invalidation and naming things" - Phil Karlton</p>
         <div class="links">
           <a href="#skills">
             <i class="fa-solid fa-code"></i>
@@ -71,8 +73,6 @@
 
     <!-- SECTION 2: Skills -->
     <section id="skills" class="skills-section">
-      <h2>Skills</h2>
-
       <div class="cells">
         <div class="cell">
           <img src="images/html-logo.webp" alt="html logo">
@@ -99,7 +99,7 @@
 
     <!-- SECTION 3: Testimony -->
     <section id="testimony" class="testimony-section">
-      <h2>Testimony</h2>
+      <h2 style="text-align: center;">Experience</h2>
 
       <div class="group">
         <div class="person-details">
@@ -134,7 +134,7 @@
 
     <!-- SECTION 4: Contact -->
     <section id="contact" class="contact-section">
-      <h2>Contact</h2>
+      <h2 style="text-align: center;">Contact</h2>
 
       <div class="group">
         <div class="text">
