change text for experience section

--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
             Front-End Software Engineer <br>
             San Francisco, CA (Remote)<br>
             Jul '22 - Sep '25<br>
-            · Participate in a twelve weeks training for new-hires to explore company tech stacks. <br>
-            · Responsible in front-end role maintaining fund administration platform called GoCentral. <br>
-            · Debug minor user interface issue, layout, and bug using Angular.<br>
-            · Build components matching design specification from design and business teams.<br>
-            · Integrate with backend APIs and display data on AG grids.<br>
-            · Participate in code deployment for production release weekly and on-call rotations.<br>
-            · Manage UI changes workflow with Git to ensure zero downtime.<br>
-            · Seek mentorship from experienced developers.<br><br>
+            · Participated in a twelve weeks training for junior hires to explore company tech stacks.<br>
+            · Responsible in front-end role maintaining fund administration platform called GoCentral.<br>
+            · Resolved minor layout issues and bugs, improving application responsiveness.<br>
+            · Built new components matching design specification from business team.<br>
+            · Implemented API integrations for retrieval and display using AG Grid for data presentation.<br>
+            · Troubleshoot and debugged production release issues during weekly on-call rotation.<br>
+            · Utilized git for UI modifications, enabling continuous delivery without service interruption.<br>
+            · Accelerated technical growth through peer programming and code reviews with teammates.<br><br>
             <span style="font-weight: bold;">Zumper</span><br>
             Associate DevOps Engineer<br>
             San Francisco, CA (Onsite)<br>
             Jan '22 - Apr '22<br>
-            · Configure health check for Traefik load balancer.<br>
-            · Participate in Hackathon to implement APIs updating on Redis instances.<br>
-            · Codify Grafana metrics of services to alert on-call developers on website issues.<br>
+            · Configured health check for Traefik load balancer to ensure high availability and efficient traffic distribution.<br>
+            · Developed API to facilitate real-time data updates on Redis instances during company annual Hackathon.<br>
+            · Implemented Grafana monitoring for service performance metrics to alert developers on website issues.<br>
           </p>
         </div>
       </div>
