--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="https://tridoan1998.github.io/Portfolio/">Taylor Doan</a>
+      <a href="https://tridoan1998.github.io/Portfolio/">Tri Doan (Taylor)</a>
     </div>
 
     <div class="right">
@@ -123,6 +123,12 @@
             · Troubleshoot and debugged production release issues during weekly on-call rotation.<br>
             · Utilized git for UI modifications, enabling continuous delivery without service interruption.<br>
             · Accelerated technical growth through peer programming and code reviews with teammates.<br><br>
+            <span style="font-weight: bold;">SS&C Technologies</span><br>
+            Software Engineer Intern<br>
+            Kansas City, MO (Onsite)<br>
+            Jul '22 - Oct '22<br>
+            · Participated in a 12 weeks training program to learn company tech stacks, worked closely with partner teams.<br>
+            · Placed in team creating web application demonstrating front-end and interpersonal ability.<br><br>
             <span style="font-weight: bold;">Zumper</span><br>
             Associate DevOps Engineer<br>
             San Francisco, CA (Onsite)<br>
