--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="left">
-      <a href="https://tridoan1998.github.io/Portfolio/">Tri Doan (Taylor)</a>
+      <a href="https://tridoan1998.github.io/Portfolio/">Tri Doan</a>
     </div>
 
     <div class="right">
@@ -44,7 +44,7 @@
     <!-- SECTION 1: Hero -->
     <section class="hero-section">
       <div class="text">
-        <h2>Hi, I'm Taylor 👋</h2>
+        <h2>Hi, I'm Tri 👋</h2>
             <p>Angular Front End Developer with experience in building responsive, resuable web application.</p>
             <br>
             <p>"There are only two hard things in Computer Science: cache invalidation and naming things" - Phil Karlton</p>
